// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`pull-request-handler comments on a pull request 1`] = `
Array [
  Object {
    "body": "## I am an example title

https://github.com/JasonEtco/tests/blob/1409a3f61a27fe80a7170026fd73eaa2108a0108/.travis.yml#L10-L15

---

###### This comment was generated by [todo](https://todo.jasonet.co) based on a \`TODO\` comment in 1409a3f61a27fe80a7170026fd73eaa2108a0108 in #32. cc @JasonEtco.",
    "number": 32,
    "owner": "JasonEtco",
    "repo": "tests",
  },
]
`;

exports[`pull-request-handler comments on a pull request and mentions the assigned user 1`] = `
Array [
  Object {
    "body": "## I am an example title

https://github.com/JasonEtco/tests/blob/1409a3f61a27fe80a7170026fd73eaa2108a0108/.travis.yml#L10-L15

---

###### This comment was generated by [todo](https://todo.jasonet.co) based on a \`TODO\` comment in 1409a3f61a27fe80a7170026fd73eaa2108a0108 in #32. cc @matchai",
    "number": 32,
    "owner": "JasonEtco",
    "repo": "tests",
  },
]
`;

exports[`pull-request-handler comments on a pull request and mentions the assigned users 1`] = `
Array [
  Object {
    "body": "## I am an example title

https://github.com/JasonEtco/tests/blob/1409a3f61a27fe80a7170026fd73eaa2108a0108/.travis.yml#L10-L15

---

###### This comment was generated by [todo](https://todo.jasonet.co) based on a \`TODO\` comment in 1409a3f61a27fe80a7170026fd73eaa2108a0108 in #32. cc @JasonEtco, @matchai and @defunkt",
    "number": 32,
    "owner": "JasonEtco",
    "repo": "tests",
  },
]
`;

exports[`pull-request-handler creates a comment with a body line 1`] = `
Array [
  Object {
    "body": "## I am an example title

Don&#x27;t forget about this body text!

---

https://github.com/JasonEtco/tests/blob/1409a3f61a27fe80a7170026fd73eaa2108a0108/.travis.yml#L10-L15

---

###### This comment was generated by [todo](https://todo.jasonet.co) based on a \`TODO\` comment in 1409a3f61a27fe80a7170026fd73eaa2108a0108 in #32. cc @JasonEtco.",
    "number": 32,
    "owner": "JasonEtco",
    "repo": "tests",
  },
]
`;

exports[`pull-request-handler works with a string as the keyword config 1`] = `
Array [
  Object {
    "body": "## I am an example title

https://github.com/JasonEtco/tests/blob/1409a3f61a27fe80a7170026fd73eaa2108a0108/.travis.yml#L10-L15

---

###### This comment was generated by [todo](https://todo.jasonet.co) based on a \`TODO\` comment in 1409a3f61a27fe80a7170026fd73eaa2108a0108 in #32. cc @JasonEtco.",
    "number": 32,
    "owner": "JasonEtco",
    "repo": "tests",
  },
]
`;
